Use SetKey instead of SetPath to make DCHECK happy

BUG=chromium:879051

Change-Id: I3e9000b6bdf7e48683010ba5e039bd6b79219910
Reviewed-on: https://chromium-review.googlesource.com/1196285
Reviewed-by: Stuart Langley <slangley@chromium.org>
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Commit-Queue: Luciano Pacheco <lucmult@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587949}
Former-commit-id: 9c69a18d9bd3ba49ba14a8b28559f0a3c66408a5